# goto-gh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  brightdata-proxy.txt  ferox-https_conduktor_io_-1766718463.state  popular_clusters.html  working-proxies.txt
scripts/: cluster_map.py
src/: cluster.rs  config.rs  db.rs  discovery.rs  embed_core.rs  embedding.rs  fetch.rs  formatting.rs  github.rs  http.rs  main.rs  openai.rs  papers.rs  proxy.rs  search.rs  server.rs
src/explore/: cross_pollinate.rs  mod.rs  profiles.rs  random_walk.rs  underrated.rs
